# zcash-web-wallet

./: .gitignore  CHANGELOG.md  CHECKSUMS.json  CLAUDE.md  Cargo.toml  Makefile  README.md  package.json  playwright.config.js  rust-toolchain.toml
.github/scripts/: verify-release-commits.sh
.github/workflows/: ci.yml  deploy.yml  update-rust.yml
cli/: Cargo.toml
cli/e2e/: test_cli.sh
cli/src/: db.rs  error.rs  main.rs  rpc.rs  scanner.rs
core/: Cargo.toml
core/src/: lib.rs  scanner.rs  transaction.rs  types.rs  wallet.rs
frontend/: app.js  index.html
frontend/e2e/: addresses.spec.js  basic.spec.js  helpers.js  rpc.spec.js  scanner.spec.js  send.spec.js  simple-view.spec.js  theme.spec.js  wallet.spec.js
frontend/js/: scanner.js  views.js
frontend/pkg/: zcash_tx_viewer.d.ts  zcash_tx_viewer.js  zcash_tx_viewer_bg.wasm  zcash_tx_viewer_bg.wasm.d.ts
frontend/sass/: style.sass
qr/src/: lib.rs
wasm-module/: Cargo.toml
wasm-module/src/: lib.rs
