[package]
name = "zcash-tx-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM module for decrypting Zcash shielded transactions"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Zcash crates - disable proving features for WASM compatibility
zcash_primitives = { workspace = true, features = ["std"] }
orchard = { workspace = true, features = ["std"] }
sapling-crypto = { workspace = true, features = ["std"] }
zcash_protocol.workspace = true
zcash_address.workspace = true
zip32.workspace = true

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

# Error handling
thiserror.workspace = true

# Crypto utilities
bech32.workspace = true

# WASM support for randomness
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
